なんかうごく

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,6 +748,7 @@
     "    def set_status(self, res_post_ans):\n",
     "        self.hits = res_post_ans['hit']\n",
     "        self.blows = res_post_ans['blow']\n",
+    "        \n",
     "        \n",
     "    def __deepcopy__(self, memo):\n",
     "        new_obj = Answer(self.answer)\n",
@@ -794,66 +795,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[True, True, True, True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True, True, True, True]]"
+      ]
+     },
+     "execution_count": 327,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maybe_answer = [[True for x in range(10)] for x in range(numeron.level)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
+    "from numeron import Numeron, Answer\n",
     "from itertools import permutations \n",
+    "\n",
     "def main(level):\n",
     "    numeron = Numeron(level)\n",
     "    answer = Answer(\"\".join([str(i) for i in range(level)]))\n",
+    "    numeron.post_answer(answer)\n",
     "    answer_before = copy.deepcopy(answer)\n",
     "    \"\"\"\n",
     "    blow 特定パート\n",
     "    \"\"\"\n",
-    "    for i in range(numeron.level):\n",
-    "        for ans_i in range(10):\n",
-    "            answer_before.set_used()\n",
-    "            if answer_before.used[ans_i] or answer.what_is_blow[ans_i] or answer.what_is_hit[i]:\n",
-    "                continue\n",
-    "            else:\n",
-    "                answer_before.answer = change_str(answer.answer, i, ans_i)\n",
-    "                numeron.post_answer(answer_before)\n",
-    "                # answerを変えていって、blowsが減った結果、元々使われてた数字がblow対象.\n",
-    "                if answer_before.blows < answer.blows:\n",
-    "                    answer.what_is_blow[int(answer.answer[i])] = True\n",
-    "                    answer_before.answer = answer.answer\n",
-    "                    break\n",
-    "                # 逆にanswerを変えていって、blowsが増えた結果、変えた数字がblow対象.\n",
-    "                elif answer_before.blows > answer.blows:\n",
-    "                    answer.what_is_blow[int(answer_before.answer[i])] = True\n",
-    "                    answer.answer = answer_before.answer\n",
-    "                    answer.blows = answer_before.blows\n",
-    "                    break\n",
-    "                # hitsに対しても同様\n",
-    "                if answer_before.hits < answer.hits:\n",
-    "                    answer.what_is_hit[i] = True\n",
-    "                    answer_before.answer = answer.answer\n",
-    "                    break\n",
-    "                elif answer_before.hits > answer.hits:\n",
-    "                    answer.what_is_hit[i] = True\n",
-    "                    answer.answer = answer_before.answer\n",
-    "                    answer.hits = answer_before.hits\n",
-    "                    break\n",
-    "        if answer.blows + answer.hits is numeron.level:\n",
-    "            break\n",
+    "    while(answer.blows + answer.hits is not numeron.level):\n",
+    "        for i in range(numeron.level):\n",
+    "            for ans_i in range(10):\n",
+    "                answer_before.set_used()\n",
+    "                if answer_before.used[ans_i] or answer.what_is_blow[ans_i] or answer.what_is_hit[i]:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    answer_before.answer = change_str(answer.answer, i, ans_i)\n",
+    "                    numeron.post_answer(answer_before)\n",
+    "                    # hitsに対しても同様\n",
+    "                    if answer_before.hits < answer.hits:\n",
+    "                        answer.what_is_hit[i] = True\n",
+    "                        answer_before.answer = answer.answer\n",
+    "                        break\n",
+    "                    elif answer_before.hits > answer.hits:\n",
+    "                        answer.what_is_hit[i] = True\n",
+    "                        answer.answer = answer_before.answer\n",
+    "                        answer.hits = answer_before.hits\n",
+    "                        break\n",
+    "                    # answerを変えていって、blowsが減った結果、元々使われてた数字がblow対象.\n",
+    "                    elif answer_before.blows < answer.blows:\n",
+    "                        answer.what_is_blow[int(answer.answer[i])] = True\n",
+    "                        answer_before.answer = answer.answer\n",
+    "                        break\n",
+    "                    # 逆にanswerを変えていって、blowsが増えた結果、変えた数字がblow対象.\n",
+    "                    elif answer_before.blows > answer.blows:\n",
+    "                        answer.what_is_blow[int(answer_before.answer[i])] = True\n",
+    "                        answer.answer = answer_before.answer\n",
+    "                        answer.blows = answer_before.blows\n",
+    "                        break\n",
+    "            if answer.blows + answer.hits is numeron.level:\n",
+    "                break\n",
     "    print(\"end of blows\")\n",
     "    print(answer.what_is_hit)\n",
+    "\n",
     "    \"\"\"\n",
     "    hit 特定パート\n",
     "    \"\"\"\n",
     "    answer_post = copy.deepcopy(answer)\n",
     "    answer_post2 = copy.deepcopy(answer)\n",
+    "\n",
     "    while(1):\n",
     "        # i桁目とj桁目を交換していく\n",
     "        for i in range(numeron.level):\n",
     "            # 確定したi桁目は除外\n",
-    "            print(i)\n",
     "            if answer.what_is_hit[i]:\n",
     "                continue\n",
     "            for j in range(i+1,numeron.level):\n",
-    "                print(i,j)\n",
-    "                print(answer.what_is_hit)\n",
     "                # 確定したj桁目は除外\n",
     "                if answer.what_is_hit[j]:\n",
     "                    continue\n",
@@ -871,7 +898,7 @@
     "                    elif answer_post.hits - answer.hits is 1:\n",
     "                        answer.answer = answer_post.answer\n",
     "                        answer.hits = answer_post.hits\n",
-    "                        break\n",
+    "                        break            \n",
     "    print(\"end\")\n",
     "        \n",
     "def change_str(string, i , change):\n",
@@ -882,189 +909,79 @@
     "\n",
     "def swap_str(string, i, j):\n",
     "    string_1 = change_str(string, i, string[j])\n",
-    "    return change_str(string_1, j, string[i])"
+    "    return change_str(string_1, j, string[i])        \n",
+    "\n",
+    "def fixing_maybe_answer(maybe_answer, i, level):\n",
+    "    for x in range(10):\n",
+    "        if x is i :\n",
+    "            continue\n",
+    "        maybe_answer[i][x] = False\n",
+    "    return maybe_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "answer : 912345678\n",
-      "{\"hit\":0,\"blow\":8,\"round\":1,\"message\":\"1回目: 0 hit, 8 blow でした。\"}\n",
-      "answer : 902345678\n",
-      "{\"hit\":1,\"blow\":7,\"round\":2,\"message\":\"2回目: 1 hit, 7 blow でした。\"}\n",
-      "answer : 910345678\n",
-      "{\"hit\":0,\"blow\":8,\"round\":3,\"message\":\"3回目: 0 hit, 8 blow でした。\"}\n",
-      "answer : 912345678\n",
-      "{\"hit\":0,\"blow\":8,\"round\":4,\"message\":\"4回目: 0 hit, 8 blow でした。\"}\n",
-      "answer : 912045678\n",
-      "{\"hit\":0,\"blow\":9,\"round\":5,\"message\":\"5回目: 0 hit, 9 blow でした。\"}\n",
+      "answer : 0123456789\n",
+      "{\"hit\":1,\"blow\":9,\"round\":1,\"message\":\"1回目: 1 hit, 9 blow でした。\"}\n",
       "end of blows\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "0\n",
-      "0 1\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 192045678\n",
-      "{\"hit\":0,\"blow\":9,\"round\":6,\"message\":\"6回目: 0 hit, 9 blow でした。\"}\n",
-      "0 2\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 219045678\n",
-      "{\"hit\":1,\"blow\":8,\"round\":7,\"message\":\"7回目: 1 hit, 8 blow でした。\"}\n",
-      "1\n",
-      "1 2\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 291045678\n",
-      "{\"hit\":1,\"blow\":8,\"round\":8,\"message\":\"8回目: 1 hit, 8 blow でした。\"}\n",
-      "1 3\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 209145678\n",
-      "{\"hit\":2,\"blow\":7,\"round\":9,\"message\":\"9回目: 2 hit, 7 blow でした。\"}\n",
-      "2\n",
-      "2 3\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 201945678\n",
-      "{\"hit\":2,\"blow\":7,\"round\":10,\"message\":\"10回目: 2 hit, 7 blow でした。\"}\n",
-      "2 4\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 204195678\n",
-      "{\"hit\":2,\"blow\":7,\"round\":11,\"message\":\"11回目: 2 hit, 7 blow でした。\"}\n",
-      "2 5\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205149678\n",
-      "{\"hit\":3,\"blow\":6,\"round\":12,\"message\":\"12回目: 3 hit, 6 blow でした。\"}\n",
-      "3\n",
-      "3 4\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205419678\n",
-      "{\"hit\":3,\"blow\":6,\"round\":13,\"message\":\"13回目: 3 hit, 6 blow でした。\"}\n",
-      "3 5\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205941678\n",
-      "{\"hit\":3,\"blow\":6,\"round\":14,\"message\":\"14回目: 3 hit, 6 blow でした。\"}\n",
-      "3 6\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205649178\n",
-      "{\"hit\":4,\"blow\":5,\"round\":15,\"message\":\"15回目: 4 hit, 5 blow でした。\"}\n",
-      "4\n",
-      "4 5\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205694178\n",
-      "{\"hit\":4,\"blow\":5,\"round\":16,\"message\":\"16回目: 4 hit, 5 blow でした。\"}\n",
-      "4 6\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205619478\n",
-      "{\"hit\":3,\"blow\":6,\"round\":17,\"message\":\"17回目: 3 hit, 6 blow でした。\"}\n",
-      "4 7\n",
-      "[False, False, False, False, False, False, False, False, False]\n",
-      "answer : 205679148\n",
-      "{\"hit\":6,\"blow\":3,\"round\":18,\"message\":\"18回目: 6 hit, 3 blow でした。\"}\n",
-      "5\n",
-      "5 6\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 205671948\n",
-      "{\"hit\":5,\"blow\":4,\"round\":19,\"message\":\"19回目: 5 hit, 4 blow でした。\"}\n",
-      "5 7\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "5 8\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 205678149\n",
-      "{\"hit\":7,\"blow\":2,\"round\":20,\"message\":\"20回目: 7 hit, 2 blow でした。\"}\n",
-      "6\n",
-      "6 7\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "6 8\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 205678941\n",
-      "{\"hit\":5,\"blow\":4,\"round\":21,\"message\":\"21回目: 5 hit, 4 blow でした。\"}\n",
-      "7\n",
-      "8\n",
-      "0\n",
-      "0 1\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 025678149\n",
-      "{\"hit\":5,\"blow\":4,\"round\":22,\"message\":\"22回目: 5 hit, 4 blow でした。\"}\n",
-      "0 2\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 502678149\n",
-      "{\"hit\":5,\"blow\":4,\"round\":23,\"message\":\"23回目: 5 hit, 4 blow でした。\"}\n",
-      "0 3\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 605278149\n",
-      "{\"hit\":6,\"blow\":3,\"round\":24,\"message\":\"24回目: 6 hit, 3 blow でした。\"}\n",
-      "0 4\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "0 5\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 805672149\n",
-      "{\"hit\":6,\"blow\":3,\"round\":25,\"message\":\"25回目: 6 hit, 3 blow でした。\"}\n",
-      "0 6\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 105678249\n",
-      "{\"hit\":5,\"blow\":4,\"round\":26,\"message\":\"26回目: 5 hit, 4 blow でした。\"}\n",
-      "0 7\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "0 8\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 905678142\n",
-      "{\"hit\":5,\"blow\":4,\"round\":27,\"message\":\"27回目: 5 hit, 4 blow でした。\"}\n",
-      "1\n",
-      "1 2\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 250678149\n",
-      "{\"hit\":5,\"blow\":4,\"round\":28,\"message\":\"28回目: 5 hit, 4 blow でした。\"}\n",
-      "1 3\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 265078149\n",
-      "{\"hit\":6,\"blow\":3,\"round\":29,\"message\":\"29回目: 6 hit, 3 blow でした。\"}\n",
-      "1 4\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "1 5\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 285670149\n",
-      "{\"hit\":6,\"blow\":3,\"round\":30,\"message\":\"30回目: 6 hit, 3 blow でした。\"}\n",
-      "1 6\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 215678049\n",
-      "{\"hit\":5,\"blow\":4,\"round\":31,\"message\":\"31回目: 5 hit, 4 blow でした。\"}\n",
-      "1 7\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "1 8\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 295678140\n",
-      "{\"hit\":5,\"blow\":4,\"round\":32,\"message\":\"32回目: 5 hit, 4 blow でした。\"}\n",
-      "2\n",
-      "2 3\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 206578149\n",
-      "{\"hit\":6,\"blow\":3,\"round\":33,\"message\":\"33回目: 6 hit, 3 blow でした。\"}\n",
-      "2 4\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "2 5\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 208675149\n",
-      "{\"hit\":6,\"blow\":3,\"round\":34,\"message\":\"34回目: 6 hit, 3 blow でした。\"}\n",
-      "2 6\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 201678549\n",
-      "{\"hit\":5,\"blow\":4,\"round\":35,\"message\":\"35回目: 5 hit, 4 blow でした。\"}\n",
-      "2 7\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "2 8\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 209678145\n",
-      "{\"hit\":5,\"blow\":4,\"round\":36,\"message\":\"36回目: 5 hit, 4 blow でした。\"}\n",
-      "3\n",
-      "3 4\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "3 5\n",
-      "[False, False, False, False, True, False, False, True, False]\n",
-      "answer : 205876149\n",
-      "{\"hit\":9,\"blow\":0,\"round\":37,\"score\":302103,\"message\":\"正解です！チャレンジありがとうございました。スコアは 302103 でした。インターン応募フォームはこちら『 https://goo.gl/forms/GbDZourrD99sD75Q2 』です。また、応募に必要なあなたのユーザーIDは『 107444758 』シークレットキーは『 HeisbyEtpsds/rWe/2E5mS4vVACxm19aPg== 』です。それでは、よろしくお願いいたします。\"}\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "answer : 1023456789\n",
+      "{\"hit\":0,\"blow\":10,\"round\":2,\"message\":\"2回目: 0 hit, 10 blow でした。\"}\n",
+      "answer : 2103456789\n",
+      "{\"hit\":1,\"blow\":9,\"round\":3,\"message\":\"3回目: 1 hit, 9 blow でした。\"}\n",
+      "answer : 3120456789\n",
+      "{\"hit\":1,\"blow\":9,\"round\":4,\"message\":\"4回目: 1 hit, 9 blow でした。\"}\n",
+      "answer : 4123056789\n",
+      "{\"hit\":1,\"blow\":9,\"round\":5,\"message\":\"5回目: 1 hit, 9 blow でした。\"}\n",
+      "answer : 5123406789\n",
+      "{\"hit\":1,\"blow\":9,\"round\":6,\"message\":\"6回目: 1 hit, 9 blow でした。\"}\n",
+      "answer : 6123450789\n",
+      "{\"hit\":3,\"blow\":7,\"round\":7,\"message\":\"7回目: 3 hit, 7 blow でした。\"}\n",
+      "answer : 6213450789\n",
+      "{\"hit\":2,\"blow\":8,\"round\":8,\"message\":\"8回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6321450789\n",
+      "{\"hit\":2,\"blow\":8,\"round\":9,\"message\":\"9回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6423150789\n",
+      "{\"hit\":2,\"blow\":8,\"round\":10,\"message\":\"10回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6523410789\n",
+      "{\"hit\":2,\"blow\":8,\"round\":11,\"message\":\"11回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6723450189\n",
+      "{\"hit\":2,\"blow\":8,\"round\":12,\"message\":\"12回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6823450719\n",
+      "{\"hit\":2,\"blow\":8,\"round\":13,\"message\":\"13回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6923450781\n",
+      "{\"hit\":2,\"blow\":8,\"round\":14,\"message\":\"14回目: 2 hit, 8 blow でした。\"}\n",
+      "answer : 6132450789\n",
+      "{\"hit\":3,\"blow\":7,\"round\":15,\"message\":\"15回目: 3 hit, 7 blow でした。\"}\n",
+      "answer : 6143250789\n",
+      "{\"hit\":3,\"blow\":7,\"round\":16,\"message\":\"16回目: 3 hit, 7 blow でした。\"}\n",
+      "answer : 6153420789\n",
+      "{\"hit\":5,\"blow\":5,\"round\":17,\"message\":\"17回目: 5 hit, 5 blow でした。\"}\n",
+      "answer : 6154320789\n",
+      "{\"hit\":5,\"blow\":5,\"round\":18,\"message\":\"18回目: 5 hit, 5 blow でした。\"}\n",
+      "answer : 6157420389\n",
+      "{\"hit\":7,\"blow\":3,\"round\":19,\"message\":\"19回目: 7 hit, 3 blow でした。\"}\n",
+      "answer : 6157820349\n",
+      "{\"hit\":8,\"blow\":2,\"round\":20,\"message\":\"20回目: 8 hit, 2 blow でした。\"}\n",
+      "answer : 6157820394\n",
+      "{\"hit\":7,\"blow\":3,\"round\":21,\"message\":\"21回目: 7 hit, 3 blow でした。\"}\n",
+      "answer : 6857120349\n",
+      "{\"hit\":7,\"blow\":3,\"round\":22,\"message\":\"22回目: 7 hit, 3 blow でした。\"}\n",
+      "answer : 6457820319\n",
+      "{\"hit\":6,\"blow\":4,\"round\":23,\"message\":\"23回目: 6 hit, 4 blow でした。\"}\n",
+      "answer : 6957820341\n",
+      "{\"hit\":7,\"blow\":3,\"round\":24,\"message\":\"24回目: 7 hit, 3 blow でした。\"}\n",
+      "answer : 6157420389\n",
+      "{\"hit\":7,\"blow\":3,\"round\":25,\"message\":\"25回目: 7 hit, 3 blow でした。\"}\n",
+      "answer : 6157920348\n",
+      "{\"hit\":10,\"blow\":0,\"round\":26,\"score\":963997,\"message\":\"正解です！チャレンジありがとうございました。スコアは 963997 でした。インターン応募フォームはこちら『 https://goo.gl/forms/GbDZourrD99sD75Q2 』です。また、応募に必要なあなたのユーザーIDは『 107444758 』シークレットキーは『 LfZxdxda0FfAogU499cZPBNAHggjpV8+bA== 』です。それでは、よろしくお願いいたします。\"}\n",
       "conguratulation.\n"
      ]
     },
@@ -1087,7 +1004,7 @@
     }
    ],
    "source": [
-    "main(9)"
+    "main(10)"
    ]
   },
   {
